# hpcc4j

./: .gitignore  .gitmodules  CMakeLists.txt  CodeArchitectureAnalysis.md  MIGRATION-10.0.md  ProperIssueRequirements.md  README.md  README_KB.md  WORKFLOW-DOCS-README.md  WORKFLOW-OPTIMIZATION-RECOMMENDATIONS.md  WORKFLOW-TRIGGER-ANALYSIS.md  WORKFLOW-TRIGGER-SUMMARY.md  _kb_connections_endpoints_manifest.json  _kb_platform_auth_manifest.json  _kb_tracing_performance_manifest.json  _kb_updates_manifest.json  excluded-tests.txt  pom.xml  workflow-analysis-summary.txt
.github/: AIIssueValidation_ProjectInformation.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/prompts/: CheckDocumentationPrompt.md  CheckDuplicatesPrompt.md  GenerateUserResponsePrompt.md  IssueValidationPrompt.md  SummarizeIssuePrompt.md
.github/scripts/: IssueValidationAgent.py  validate_issue.py
.github/workflows/: AIIssueValidation.yml  BuildTestAllBranches.yml  (+41 more)
WsDFU_getFileDataColumnsTestGeneration/: IMPLEMENTATION_SUMMARY.md  ITERATION1_SUMMARY.md  VERIFICATION.md  WsDFU.getFileDataColumnsAnalysis.md  WsDFU.getFileDataColumnsAnalysis_2025-11-11.md  WsDFU.getFileDataColumnsBatchAnalysis_Iteration1.md  WsDFU.getFileDataColumnsExpectedTestResults.md  WsDFU.getFileDataColumnsExpectedTestResults_2025-11-11.md  WsDFU.getFileDataColumnsFailureReport_Iteration1.md  WsDFU.getFileDataColumnsFinalReport.md  WsDFU.getFileDataColumnsFinalReport_2025-11-11.md  WsDFU.getFileDataColumnsTestMetadata.json  WsDFU.getFileDataColumnsTestResults_Iteration1.json
clienttools/: .gitignore  README.md  pom.xml
cmake_modules/: docMacros.cmake  japisSetup.cmake
commons-hpcc/: README.md  pom.xml
dfsclient/: README.md  pom.xml
docs/: CMakeLists.txt  developer-guide.md
docs/BuildTools/: xsltproc.cmake.in
docs/HPCC4J_doc/: CMakeLists.txt  HPCC4J_Includer.xml
docs/HPCC4J_doc/HPCC4J_Mods/: HPCC4J_Build.xml  HPCC4J_Intro.xml  HPCC4J_IntroAsSect1.xml  HPCC4J_Use.xml
docs/JAPI_doc/: CMakeLists.txt  Japi_Includer.xml
docs/JAPI_doc/Japi_Mods/: Japi_Build.xml  Japi_Intro.xml  Japi_IntroAsSect1.xml  Japi_Use.xml
docs/common/: CMakeLists.txt  LN-html.css  Version.xml.in
eclipse/: HPCC-JAVA-Formatter.xml
hpcc_commons/: README.md  pom.xml
kb/: README.md
org.hpccsystems.clienttools/: .classpath  .project  pom.xml
org.hpccsystems.rdf.rdf2hpcc/: .classpath  .project  README.md  buid.xml  pom.xml
org.hpccsystems.ws.client/: .classpath  .project  pom.xml
org.hpccsystems.ws.client.legacy/: .classpath  .project  pom.xml
rdf2hpcc/: .gitignore  README.md  pom.xml
scripts/: MethodAnalysisPrompt.md  TestGeneratorAgent.py  TestGeneratorAgent_README.md  create-jira-ticket.sh  kb_index.py
spark-hpcc/: README.md  pom.xml
web/: README.md  index.html
workflows/: index_kb.yml
wsclient/: .gitignore  README.md  pom.xml
(+1994 files in other folders)
